syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

import "LoanApplicationRegister.proto";
import "TransmittalSheet.proto";

message TsParsedErrorsMessage {
    repeated string errors = 1;
}

message TsParsedMessage {
    TransmittalSheetMessage ts = 1;
}

message LarParsedMessage {
    LoanApplicationRegisterMessage lar = 1;
}

message LarParsedErrorsMessage {
    LarParsingErrorMessage errors = 1;
}

message LarParsingErrorMessage {
    int32 lineNumber = 1;
    repeated string errorMessages = 2;
}
